setTimeout added in script.js

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                             </div>
 
                             <div class="btn">
-                                <button type="submit" class="update-btn">Update</button>
+                                <button type="submit" class="update-btn" id="update-btn">Update</button>
                             </div>
 
                         <!-- <div class="celebration" id="celebration-display">
