--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <img src="images/logo.png" alt="Logo">
     </div>
 
+    <!-- <div class="message-container">
+
+    </div> -->
+
     <div class="container">
         <div class="grid-item">
             <div class="user-form">
