--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/icons8-refund-100.png" type="image/x-icon">
-    <title>Employee Benefits Monitor</title>
+    <title>Employee Benefits Tracker</title>
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
@@ -14,7 +14,6 @@
     
 </head>
 <body>
-    
 
     <div class="container">
         <!-- <div class="logo">
@@ -22,8 +21,8 @@
         </div> -->
 
         <h1>
-            <span>Employee Benefits Monitor</span>
-            <span>Employee Benefits Monitor</span>
+            <span>Employee Benefits Tracker</span>
+            <span>Employee Benefits Tracker</span>
         </h1>
 
         <div class="grid-item">
